<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/yp_black"
        android:textSize="22sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        android:foreground="?attr/selectableItemBackground"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textColor="@color/yp_black"
        android:textSize="22sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        android:foreground="?attr/selectableItemBackground"
        app:iconTint="#000000" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="3"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/yp_black"
        android:textSize="22sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        android:foreground="?attr/selectableItemBackground"
        app:iconTint="#000000" />


</LinearLayout>