<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical">

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/yp_white"
        android:text="@string/settings"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/text"
        app:icon="@drawable/back"
        app:iconPadding="@dimen/set_size20"
        app:iconTint="@color/yp_black"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/borderlessButtonStyle"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_size61"
        android:layout_marginTop="80dp"
        android:textSize="@dimen/set_textSize"
        android:paddingLeft="@dimen/set_padding16"
        android:paddingRight="6dp"
        android:text="@string/darkTheme"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_size61"
        android:backgroundTint="@color/yp_white"
        android:paddingLeft="@dimen/set_padding16"
        android:paddingRight="@dimen/set_padding18"
        android:text="@string/share"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/set_textSize"
        app:icon="@drawable/share"
        app:iconGravity="end"
        app:iconPadding="@dimen/set_size20"
        app:iconTint="@color/yp_grey"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/bt3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_size61"
        android:backgroundTint="@color/yp_white"
        android:paddingLeft="@dimen/set_padding16"
        android:paddingRight="@dimen/set_padding18"
        android:text="@string/mailto"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/set_textSize"
        app:icon="@drawable/support"
        app:iconGravity="end"
        app:iconPadding="@dimen/set_size20"
        app:iconTint="@color/yp_grey"
        app:layout_constraintTop_toBottomOf="@+id/bt2"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/bt4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_size61"
        android:backgroundTint="@color/yp_white"
        android:paddingLeft="@dimen/set_padding16"
        android:paddingRight="@dimen/set_padding18"
        android:text="@string/useragr"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/set_textSize"
        app:icon="@drawable/forward"
        app:iconGravity="end"
        app:iconPadding="@dimen/set_size20"
        app:iconTint="@color/yp_grey"
        app:layout_constraintTop_toBottomOf="@+id/bt3"
        style="?android:attr/borderlessButtonStyle"/>


</LinearLayout>